--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
     <span class="divider">|</span>
 
     <nav class="top-links">
-      <a href="#about">About</a>
+      <li><a href="who-we-are.html">Who We Are</a></li>
       <a href="#symptoms">Symptoms</a>
       <a href="#prevention">Prevention</a>
       <a href="#screening">Screening</a>
       <a href="#support">Support</a>
       <a href="#donate">Donate To Our Lab</a>
+      
+
     </nav>
   </div>
 </div>
@@ -449,6 +451,43 @@ It helps identify small tumors or abnormalities that cannot be felt by touch.
     <p>&copy; 2025 OncoTrace Lab & Biotech. All rights reserved.</p>
   </div>
 </footer>
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Responsive Demo</title>
+</head>
+<body>
+
+  <nav class="navbar">
+    <h2 class="logo">MySite</h2>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <header class="hero">
+    <h1>Welcome to My Website</h1>
+    <p>Responsive design made simple.</p>
+  </header>
+
+  <section class="grid">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+  </section>
+
+</body>
+</html>
 
 
 
