--- a/index.html
+++ b/index.html
@@ -454,6 +454,8 @@ It helps identify small tumors or abnormalities that cannot be felt by touch.
 
 
 
+</body>
+
 
 
 <!DOCTYPE html>
@@ -466,9 +468,37 @@ It helps identify small tumors or abnormalities that cannot be felt by touch.
 </head>
 <body>
 
+  <nav class="navbar">
+    <h2 class="logo">MySite</h2>
+    <div class="menu-toggle" id="menu-toggle">
+      &#9776; <!-- Hamburger icon -->
+    </div>
+    <ul class="nav-links" id="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 
+  <header class="hero">
+    <h1>Welcome to My Website</h1>
+    <p>Responsive design made simple.</p>
+  </header>
 
+  <section class="grid">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
   </section>
+
+  <script>
+    const menuToggle = document.getElementById('menu-toggle');
+    const navLinks = document.getElementById('nav-links');
+
+    menuToggle.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+    });
+  </script>
 
 </body>
 </html>
@@ -481,5 +511,6 @@ It helps identify small tumors or abnormalities that cannot be felt by touch.
 
 
 
-</body>
+
+
 </html>
